src/objects/Laptop_Warranty__c/Laptop_Warranty__c.object-meta.xml
<CustomObject>
    <label>Laptop_Warranty</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Laptop_Warranty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laptop_Warranty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>