src/objects/Laptop_Warranty__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>